# mataho

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  cli.rs  controller.rs  device.rs  device_group.rs  main.rs  service.rs
src/api/: controller.rs  device.rs
src/cli/: model.rs  parser.rs
src/mataho/: service.rs
src/tahoma/: controller.rs  model.rs
