[package]
name = "tahoma-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = [ "derive" ] }
nucleo = "0.5.0"
reqwest = { version = "0.12.5", features = [ "blocking", "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
