[package]
name = "mataho"
version = "0.1.0"
authors = ["Coko <91132775+Coko7@users.noreply.github.com>"]
edition = "2021"
description = "A cli to interact with a local Tahoma box"
readme = "README.md"
homepage = "https://github.com/Coko7/mataho"
repository = "https://github.com/Coko7/mataho"
license = "GPL-3.0-only"
keywords = ["cli", "tahoma", "mataho", "somfy", "clap-rs"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = [ "derive" ] }
fuzzy-matcher = "*"
nucleo = "0.5.0"
reqwest = { version = "0.12.5", features = [ "blocking", "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
xdg = "^2.1"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
